[tool.poetry]
name = "ai-travel-planner"
version = "0.1.0"
description = "AI-powered travel planning assistant with flights and hotels search"
authors = ["meirk <meirk@brightdata.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.14"
langchain = "0.3.25"
langchain-core = "0.3.65"
langchain-community = "0.3.25"
langchain-google-genai = "2.1.5"
langgraph = "0.4.8"
langgraph-prebuilt = "0.2.2"
langgraph-checkpoint = "2.0.26"
pydantic = "2.11.6"
pydantic-settings = "2.9.1"
python-multipart = "0.0.20"
httpx = "0.28.1"
python-dotenv = "1.1.0"
sendgrid = "6.12.4"
mcp-use = "1.3.1"
google-genai = "1.21.0"
aiohttp = "3.12.13"
requests = "2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "0.12.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
start-backend = "backend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"